Move diagram a bit to the right to avoid overlaping tick labels (at least till a new Flot version fixes that)
Cf. bug ID 3175343

--- a/visu/designs/discreet/basic.css
+++ b/visu/designs/discreet/basic.css
@@ -353,6 +353,7 @@ div#loading {
 }
 
 .diagram_inline {
+    margin-left: 1em;
     width: 320px;
     height: 180px;
 }
